feat: seguridad con roles, tests automatizados, backup y documentacion